<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="Media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="shareData">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="shareTitle">Поделиться через…</string>
    <string name="supportEmail">magavrilov_1@edu.hse.ru</string>
    <string name="subjectEmail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="messageEmail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreementLink">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="retry">Обновить</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="no_music">Ничего не нашлось</string>
    <string name="search_story_text">Вы искали</string>
    <string name="clear_history_text">Очистить историю</string>
    <string name="Length">Длительность</string>
    <string name="Album">Альбом</string>
    <string name="Year">Год</string>
    <string name="Genre">Жанр</string>
    <string name="Country">Страна</string>
    <string name="default_timer">00:00</string>
</resources>