<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/MainActivityBackgroundColor"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/playlist_maker"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_22"
        android:gravity="center_vertical"
        android:fontFamily="@font/ys_display_medium"/>

    <FrameLayout
        android:layout_marginTop="24dp"
        style="@style/FrameLayoutMainActivityStyle">

        <Button
            android:id="@+id/searchButton"
            style="@style/ButtonMainActivityStyle"/>

        <LinearLayout
            style="@style/LinearLayoutMainActivityStyle">

            <ImageView
                style="@style/ImageViewMainActivityStyle"
                android:src="@drawable/ic_search"/>

            <TextView
                android:text="@string/search"
                style="@style/TextViewMainActivityStyle"/>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        style="@style/FrameLayoutMainActivityStyle">

        <Button
            android:id="@+id/mediaButton"
            style="@style/ButtonMainActivityStyle"/>

        <LinearLayout
            style="@style/LinearLayoutMainActivityStyle">

            <ImageView
                style="@style/ImageViewMainActivityStyle"
                android:src="@drawable/ic_media"/>

            <TextView
                android:text="@string/Media"
                style="@style/TextViewMainActivityStyle"/>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        style="@style/FrameLayoutMainActivityStyle">

        <Button
            android:id="@+id/settingsButton"
            style="@style/ButtonMainActivityStyle"/>

        <LinearLayout
            style="@style/LinearLayoutMainActivityStyle">

            <ImageView
                style="@style/ImageViewMainActivityStyle"
                android:src="@drawable/ic_settings"/>

            <TextView
                android:text="@string/settings"
                style="@style/TextViewMainActivityStyle" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>