<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backFromSettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:src="@drawable/ic_back"
            android:background="@android:color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:padding="@dimen/padding"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/black_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:gravity="center_vertical"
            android:layout_gravity="start"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:thumb="@drawable/ic_knob"
            app:track="@drawable/ic_track"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:checked="true"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:gravity="center_vertical"
            android:layout_gravity="start"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_share"
            android:background="@android:color/white"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:gravity="center_vertical"
            android:layout_gravity="start"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_support"
            android:background="@android:color/white"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:gravity="center_vertical"
            android:layout_gravity="start"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_agreement"
            android:background="@android:color/white"
            />
    </FrameLayout>
</LinearLayout>