<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/ActivityBackgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="52dp"/>

        <ImageButton
            android:id="@+id/backFromAudioPlayerActivityButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_back"
            android:background="?attr/ButtonsColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
            android:layout_marginTop="4dp"/>

        <ImageView
            android:id="@+id/cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:text=""
            android:fontFamily="@font/ys_display_medium"
            android:textSize="22sp"
            android:textColor="?attr/TextViewActivityColor"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/cover"
            android:layout_marginTop="24dp"
            android:gravity="start"/>

        <TextView
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:text=""
            android:fontFamily="@font/ys_display_medium"
            android:textSize="14sp"
            android:textColor="?attr/TextViewActivityColor"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/header"
            android:layout_marginTop="12dp"
            android:gravity="start"/>

        <ImageButton
            android:id="@+id/albumButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/round_button"
            android:src="@drawable/ic_album"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/group"
            android:layout_marginTop="54dp"/>

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/round_button"
            android:src="@drawable/ic_like"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/group"
            android:layout_marginTop="54dp"/>

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="83.33dp"
            android:layout_height="83.33dp"
            android:background="@drawable/round_button"
            android:src="@drawable/ic_play"
            app:layout_constraintEnd_toStartOf="@+id/likeButton"
            app:layout_constraintStart_toEndOf="@+id/albumButton"
            app:layout_constraintTop_toBottomOf="@+id/group"
            android:layout_marginTop="38.33dp"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="100dp"
            android:layout_height="16dp"
            android:text="0:00"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="14sp"
            android:color="?attr/TextViewActivityColor"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/playButton"
            android:layout_marginTop="4dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/length"
            style="@style/AudioActivityLeftTextViewStyle"
            android:text="@string/Length"
            app:layout_constraintTop_toBottomOf="@+id/time"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            android:layout_marginTop="29dp"/>

        <TextView
            android:id="@+id/lengthTime"
            style="@style/AudioActivityRightTextViewStyle"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/time"
            android:layout_marginTop="29dp"/>

        <TextView
            android:id="@+id/album"
            style="@style/AudioActivityLeftTextViewStyle"
            android:text="@string/Album"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/length"
            android:layout_marginTop="17dp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/albumName"
            style="@style/AudioActivityRightTextViewStyle"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/lengthTime"
            android:layout_marginTop="17dp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/year"
            style="@style/AudioActivityLeftTextViewStyle"
            android:text="@string/Year"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/album"
            android:layout_marginTop="17dp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/yearNumber"
            style="@style/AudioActivityRightTextViewStyle"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/albumName"
            android:layout_marginTop="17dp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/genre"
            style="@style/AudioActivityLeftTextViewStyle"
            android:text="@string/Genre"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/year"
            android:layout_marginTop="17dp"/>

        <TextView
            android:id="@+id/genreName"
            style="@style/AudioActivityRightTextViewStyle"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/yearNumber"
            android:layout_marginTop="17dp"/>

        <TextView
            android:id="@+id/country"
            style="@style/AudioActivityLeftTextViewStyle"
            android:text="@string/Country"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            android:layout_marginTop="17dp"/>

        <TextView
            android:id="@+id/countryName"
            style="@style/AudioActivityRightTextViewStyle"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/genreName"
            android:layout_marginTop="17dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>